src/test/ui/regions/regions-bounded-method-type-parameters.stderr
error[E0477]: the type `&'a isize` does not fulfill the required lifetime
  --> $DIR/regions-bounded-method-type-parameters.rs:12:9
   |
LL |     Foo.some_method::<&'a isize>();
   |         ^^^^^^^^^^^
   |
   = note: type must satisfy the static lifetime

error: aborting due to previous error

